better use of space on database config editor meta-data page; Encoding and some deprecations warnings fixed